<resources>
    <string name="app_name">Test_Notes</string>
    <string name="label_day_of_week">День недели:</string>
    <string name="add_note">ДОБАВИТЬ ЗАМЕТКУ</string>
    <string name="hint_title">Заголовок заметки:</string>
    <string name="hint_description">Описание заметки:</string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string name="warning_fill_fields">Все поля должны быть заполнены!</string>

    <string-array name="days_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>